--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<header>
 
 		<div style="width:15%">
-			<a href="site.html"><img src="pcheader3.png" style="width:100%"></a>
+			<a href="index.html"><img src="pcheader3.png" style="width:100%"></a>
 
 		</div>
 
